<resources>
    <string name="app_name">My Cycle</string>
    <string name="action_settings">Settings</string>
    <string name="jump_to_today">Jump to Today</string>
    <string name="mens_days">Average days your period lasts</string>
    <string name="mens_days_description">Number of days your bleed lasts starting from the first day you see blood</string>
    <string name="mens_cycle_days">Days between your menstrual cycle</string>
    <string name="mens_cycle_days_description">Number of days for one mens cycle staring from the first day yor see blood</string>
    <string name="last_month_mens_date">First day of your last period</string>
    <string name="ok">ok</string>
    <string name="cancel">Cancel</string>
    <string name="select_number">Select a number</string>

    <string name="menstral_cycle_note">Please note that this is only an estimation of your menstrual cycle</string>
    <string name="this_cannot_be_empty">This cannot be empty</string>
    <string name="welcome">Welcome!</string>
    <string name="can_be_modified">These details can later be modified in the app</string>
    <string name="provide_initial_details">Please provide details about you so the app can predict your menstual cycle.</string>
    <string name="period_notification">Your period is predicted to start in</string>
    <string name="day">day(s)</string>
    <string name="period_alert">Your period alert!</string>
    <string name="prefs_personal_info_title">Personal info</string>
    <string name="prefs_notifications_title">Notifications</string>
    <string name="prefs_period_notifications">Period notifications</string>
    <string name="prefs_notify_before">Days before notification</string>
    <string name="prefs_ovulation_notifications">Ovulation notifications</string>
    <string name="prefs_notification_detault_days">1 day</string>
    <string name="prefs_ovulation_notification_detault_days">2 days</string>
    <string name="ovulation_notification">Your ovulation will happen in the next</string>
    <string name="action_help">Help</string>
    <string name="cycle_history">Cycle history</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="period_days">Period days</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_cycle_history">CycleHistoryActivity</string>
    <string name="calendar">Calendar</string>
    <string name="get_started">Get started</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="swahili">Swahili</string>
    <string name="ovulation_days">Ovulation days (Fertility window)</string>
    <string name="luteal_phase_days">Luteal phase days</string>
    <string name="luteal_phase_description">Days between ovulation and your next period</string>
    <string name="set">Set</string>
    <string name="period_started">Period started</string>
    <string name="add_note">Add note</string>
    <string name="edit_period_days">Edit period days</string>
    <string name="action_save">Save</string>
    <string name="discard">Discard</string>
    <string name="write_a_note">Write a note</string>
</resources>
