<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/first"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_cycle_history"
            android:icon="@drawable/ic_menu_cycle_history"
            android:title="@string/cycle_history" />

    </group>

    <group
        android:id="@+id/second"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/action_settings"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/action_help"/>
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
